More URL bar fixes.
--HG--
rename : uriloader/base/nsIWebProgress.idl => uriloader/base/nsIAsyncWebProgress.idl
rename : uriloader/base/nsIWebProgressListener2.idl => uriloader/base/nsIAsyncWebProgressListener.idl

--- a/uriloader/base/Makefile.in
+++ b/uriloader/base/Makefile.in
@@ -34,6 +34,8 @@ XPIDLSRCS = 							\
 				nsITransfer.idl \
 				nsIDocumentLoader.idl		\
 				nsIWebProgressListener2.idl \
+				nsIAsyncWebProgress.idl \
+				nsIAsyncWebProgressListener.idl \
 				$(NULL)
 
 EXPORTS = 							\
